# izumi

./: .env  .env.example  .gitignore  Build Android and Send to Phone.cmd  CNAME  CONTRIBUTING.md  README.md  RELEASING.md  THIRD-PARTY-NOTICES.md  com.nicho.izumi.flatpakref  index.html  izumi.gpg  package-lock.json  package.json  summary  summary.idx  summary.idx.sig  summary.sig  tailwind.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux.yml  ci.yml  release.yml  version-bump.yml
brand/: README.md
brand/steamgriddb/: README.md
delta-indexes/2u/: J7v6go13gfs55lI7ddcIgWyOZYv1d5jWJWqY5DPl4.index
delta-indexes/3c/: bnEl0Nh8BcRpLHpwFlx3MjbdrKQeUEcWy5w35FDCw.index
delta-indexes/E2/: sh_x+5kSzPSlOq+DwiSxinh5kEujAgFSi6x8kG8MQ.index
delta-indexes/LN/: RA6QJgZcUPirzhKzPIcKOMbcUsSQg_C+6qfQIx5qY.index
delta-indexes/O_/: VpQvNeniKujGkIFLOyuJ6dgHVjMgxJMZKIv_ob0nI.index
delta-indexes/Ru/: aKJbIMXXQL6D7d9QMeiGLI6y6N8P6XyL3pFDDE9Wk.index
delta-indexes/XE/: 8mNT2qwv9zsqCh4C6LFiRrUY6vt7_031pm0aZBEj4.index
delta-indexes/fE/: t_5_fOMazveEyfkIMW0hZ5f_ZDvqo6L_PVPj0gJkg.index
delta-indexes/jS/: lCLFnurGP7ePq9ZiXy56S3DPf2I86ZMuhROnV_UT4.index
delta-indexes/lR/: 3UpqvA7GTINRYppPlwyhgti6dhr9NE24jGz4AbXDY.index
delta-indexes/u+/: xkx6mJ9IqkpOwY784o9P6fJW99zw8pNVGAAhpr3x8.index
delta-indexes/yM/: peUhABPntWP_f8tG3S8PH2I7ZY2HB2Nm7vewhxn8E.index
deltas/2u/J7v6go13gfs55lI7ddcIgWyOZYv1d5jWJWqY5DPl4/: 0  superblock
deltas/3c/bnEl0Nh8BcRpLHpwFlx3MjbdrKQeUEcWy5w35FDCw/: 0  superblock
deltas/E2/sh_x+5kSzPSlOq+DwiSxinh5kEujAgFSi6x8kG8MQ/: 0  superblock
deltas/LN/RA6QJgZcUPirzhKzPIcKOMbcUsSQg_C+6qfQIx5qY/: 0  superblock
deltas/O_/VpQvNeniKujGkIFLOyuJ6dgHVjMgxJMZKIv_ob0nI/: 0  superblock
deltas/Ru/aKJbIMXXQL6D7d9QMeiGLI6y6N8P6XyL3pFDDE9Wk/: 0  superblock
deltas/XE/8mNT2qwv9zsqCh4C6LFiRrUY6vt7_031pm0aZBEj4/: 0  superblock
deltas/fE/t_5_fOMazveEyfkIMW0hZ5f_ZDvqo6L_PVPj0gJkg/: 0  superblock
deltas/jS/lCLFnurGP7ePq9ZiXy56S3DPf2I86ZMuhROnV_UT4/: 0  superblock
deltas/lR/3UpqvA7GTINRYppPlwyhgti6dhr9NE24jGz4AbXDY/: 0  (+1 more)
flatpak/: com.nicho.izumi.desktop  com.nicho.izumi.metainfo.xml  com.nicho.izumi.yml  dev-build.sh
scripts/: build-android-and-install.ps1  gen-android-icons.mjs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.android-mpv.conf.json  tauri.android.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: android-mpv.json  default.json  discussion-popup.json  haptics.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/permissions/: steam-osk.toml
src-tauri/src/: direct_torrent.rs  direct_torrent_select.rs  doh.rs  download.rs  lib.rs  library.rs  main.rs  steam_osk.rs  sync.rs  watch_room.rs
src-tauri/src/player/: gamepad_linux.rs  gm_osd.rs  headless.rs  linux_embed.rs  linux_overlay.rs  linux_proc.rs  linux_x11.rs  mod.rs  shaders.rs  wakelock.rs
src-tauri/tauri-plugin-extplayer/: .gitignore  Cargo.toml  build.rs
src-tauri/tauri-plugin-extplayer/android/: build.gradle.kts
src-tauri/tauri-plugin-extplayer/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-extplayer/android/src/main/java/app/izumi/extplayer/: ExtPlayerPlugin.kt
src-tauri/tauri-plugin-extplayer/android/src/main/res/xml/: izumi_ext_file_paths.xml
src-tauri/tauri-plugin-extplayer/permissions/: default.toml
src-tauri/tauri-plugin-extplayer/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-extplayer/permissions/autogenerated/commands/: da_login.toml  da_react.toml  da_reaction_state.toml  device_status.toml  install_apk.toml  open_browser.toml  play_external.toml
src-tauri/tauri-plugin-extplayer/permissions/schemas/: schema.json
src-tauri/tauri-plugin-extplayer/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/tauri-plugin-mpv/: Cargo.toml  build.rs
src-tauri/tauri-plugin-mpv/android/: build.gradle.kts
src-tauri/tauri-plugin-mpv/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-mpv/android/src/main/java/app/izumi/mpv/: IzumiMpvView.kt  MpvPlugin.kt
src-tauri/tauri-plugin-mpv/permissions/: default.toml
src-tauri/tauri-plugin-mpv/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-mpv/permissions/autogenerated/commands/: mpv_brightness.toml  mpv_command.toml  mpv_fullscreen.toml  mpv_get.toml  mpv_haptic.toml  mpv_load.toml  mpv_pip.toml  mpv_set.toml  mpv_stop.toml  mpv_thumb.toml  mpv_transform.toml  mpv_viewport.toml
src-tauri/tauri-plugin-mpv/permissions/schemas/: schema.json
src-tauri/tauri-plugin-mpv/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src/lib/: changelog.test.ts  changelog.ts  haptics.test.ts  haptics.ts  platform.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/test/: env-public-stub.ts
static/: disqus-embed.html  script-embed.html
summaries/: 1c87f7670f4792f515fe7219fbe26cf7c733a7d04e851cf510a18f09eeab4f2d-3b9ff48bbaf0c9693d7dc0155044dc53ecacccd66785d658d3c496c6965ab9e9.delta  3138f2e2836569e7102f5502677919b45d7dab5de19dbf522a5dc56bb3d82366-62404b8cb6f7a39421d1396482700285b1dde9d1e502eeeb3a8ae6646ba3ede4.delta  53a1fc883ad665b2c7390c564fc22876781c191e07a841b3f54891c266cee82e-62404b8cb6f7a39421d1396482700285b1dde9d1e502eeeb3a8ae6646ba3ede4.delta  b4f4ca2bef799f62dd76c158d549f62b7b83385ffde5e2d478052c0b293f07c3-d775353dc479e2e52830c0dc063e9e89ad5ab7fff27a801c0c503d0a003316ad.delta  c7570f76cdbad0444ca95a0efa56993d553b9ecb96ec38f96c361e4bade20a26-4f2561b69f1e27ed18173fc4f592e2eda9f2fa25b72ac5ccd0d54bacf5a08bb5.delta  d8e54a531f28e208e88338c44dd14e52183c5a4ded2528c273730de5e8638ce6-d775353dc479e2e52830c0dc063e9e89ad5ab7fff27a801c0c503d0a003316ad.delta  de455ca6d4c9c7942b4c208a8c8443d5511221fbbd4c6d5b601dc0cfca37e7e6-3b9ff48bbaf0c9693d7dc0155044dc53ecacccd66785d658d3c496c6965ab9e9.delta  fd4458aef98569bcac5dd2eeeb609b1d5854ca2c4f57cc82c21f4a170d2c9468-4f2561b69f1e27ed18173fc4f592e2eda9f2fa25b72ac5ccd0d54bacf5a08bb5.delta
(+277 files in other folders)
