[package]
name = "izumi"
version = "0.1.0"
description = "A native desktop anime client"
authors = ["izumi contributors"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "izumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enable the webview inspector in RELEASE builds (used by the build-linux test
# workflow via `--features devtools`; NOT enabled in the shipped release).
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Platform/OS detection (used to branch behavior on Android vs desktop). Registered
# for all platforms.
tauri-plugin-os = "2"
# In-tree plugin: launch an external Android video player via ACTION_VIEW (no-op on desktop).
tauri-plugin-extplayer = { path = "tauri-plugin-extplayer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libmpv2 = "6.0.0"
# Raw FFI for the software render API (headless scrub thumbnails) — the safe libmpv2
# RenderContext wrapper is OpenGL-only. Pinned to the version libmpv2 6.0.0 uses.
libmpv2-sys = "4.0.1"
tauri-plugin-http = "2.5.9"
tokio = { version = "1", features = ["time", "fs", "io-util", "net"] }
# Offline downloads: stream a resolved debrid URL to disk (pure reqwest GET — no
# webview http-scope, no plugin-fs). reqwest is already in the tree via plugin-http.
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
# Downscale headless-mpv screenshots (full-res PNG → small JPEG tile) for the warm
# scrub-thumbnail decoder. Minimal features: PNG decode + JPEG encode only.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Native file dialog — pick the external-player executable.
tauri-plugin-dialog = "2"
# Signed auto-updater (GitHub Releases: stable = latest, beta = pre-release).
tauri-plugin-updater = "2"
url = "2"

# Raw Win32 for true borderless fullscreen + mpv-child input passthrough, and the
# WebView2 COM call to make the webview background transparent (Stremio's model:
# opaque window + transparent webview). windows 0.61 + webview2-com 0.38 match
# Tauri 2.11's own versions so the `with_webview` controller interface unifies.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.38"

# Linux: embed mpv via its OpenGL render API into a wl_subsurface placed below the
# transparent webview (see player/linux_embed.rs). gtk3/gdk/glib match Tauri 2.11's
# webkitgtk stack (window/CSD geometry + main-thread dispatch); khronos-egl builds our
# own EGL context on the subsurface; wayland-client/-egl create the subsurface tree;
# raw-window-handle pulls the toplevel wl_surface/wl_display out of the Tauri window;
# the `gl` crate is used for the clear/viewport around mpv's render.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
gl = "0.14"
khronos-egl = { version = "6", features = ["dynamic"] }
wayland-client = "0.31"
wayland-egl = "0.32"
# Steam Deck Game mode (gamescope): gamescope exposes NO wl_subcompositor (so the subsurface
# path above can't run) but DOES expose zwlr_layer_shell_v1 + dmabuf. We render the video into
# a layer-shell BACKGROUND surface and keep the transparent webview toplevel on top → gamescope
# composites controls over fullscreen video, same UX as Desktop. (Measured on gamescope 3.16.)
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
raw-window-handle = "0.6"
# Steam Deck L2/R2 seek: webkit2gtk's own Gamepad API (libmanette) doesn't reliably see the
# Deck's (Steam-virtual) controller, so we read it directly via evdev in the Rust backend and
# forward the trigger state to the webview. gilrs handles enumeration + Xbox trigger mapping.
gilrs = "0.11"
# Pinned to the exact version wry/Tauri 2.11 links (must unify — one `web_kit2` links key).
# Used to force HardwareAccelerationPolicy::Never so WebKit renders the UI in software:
# with accelerated compositing on, WebKit's layer subsurfaces don't clear on a transparent
# view, leaving ghost rectangles (menus/tooltips) until a resize.
webkit2gtk = { version = "=2.0.2", features = ["v2_40"] }

