[package]
name = "izumi"
version = "0.1.7"
description = "A native desktop anime client"
authors = ["izumi contributors"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "izumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Size-optimized release build (shrinks the shipped native lib — the debug .so is ~163 MB of
# symbols/unoptimized code that never ships). strip drops symbols (big win, no runtime cost),
# lto + one codegen unit shrink and often speed up the output. Applies to desktop + android release.
[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
# Enable the webview inspector in RELEASE builds (used by the build-linux test
# workflow via `--features devtools`; NOT enabled in the shipped release).
devtools = ["tauri/devtools"]
# The "full" Android flavor: compile in the embedded libmpv player plugin (pulls the ~24 MB
# libmpv arm64 .so via the plugin's AAR). Omit it for the "lite" flavor (external player, small
# APK — today's default). Only meaningful on the Android target.
android-mpv = ["dep:tauri-plugin-mpv"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Platform/OS detection (used to branch behavior on Android vs desktop). Registered
# for all platforms.
tauri-plugin-os = "2"
# In-tree plugin: launch an external Android video player via ACTION_VIEW (no-op on desktop).
tauri-plugin-extplayer = { path = "tauri-plugin-extplayer" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
# rustls (not native-tls) so the whole HTTP stack cross-compiles for Android — native-tls needs
# OpenSSL, which has no Android target here.
tauri-plugin-http = { version = "2.5.9", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time", "fs", "io-util", "net", "sync"] }
anyhow = "1"
blake3 = "1"
# Account-free device sync. Keep only the runtime features Izumi uses: relay-capable
# TLS, NAT traversal, persistent storage, and gossip networking. The upstream
# defaults also enable metrics, RPC servers, and legacy database migration code.
iroh = { version = "1.0", default-features = false, features = ["tls-ring", "portmapper"] }
iroh-docs = { version = "0.101", default-features = false, features = ["fs-store"] }
iroh-blobs = { version = "0.103", default-features = false, features = ["fs-store"] }
iroh-gossip = { version = "0.101", default-features = false, features = ["net"] }
# The higher-level mDNS lookup only multicasts on the OS default interface. Use
# swarm-discovery directly so multi-homed PCs also query their Wi-Fi/LAN adapters.
swarm-discovery = "0.6"
netwatch = "0.19"
data-encoding = "2.11"
n0-future = "0.3"
# Offline downloads: stream a resolved debrid URL to disk (pure reqwest GET — no
# webview http-scope, no plugin-fs). rustls-tls for the same Android cross-compile reason.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "charset"] }
futures-util = "0.3"
# Native file dialog — pick the external-player executable.
tauri-plugin-dialog = "2"
url = "2"
# Embedded BitTorrent engine. Its read-only localhost HTTP endpoint supports
# byte ranges, so mpv can seek while only the selected episode is downloaded.
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls", "http-api", "tracing-subscriber-utils"] }

# Native-player + desktop-only deps, EXCLUDED from the Android build (which delegates playback to
# an external app): libmpv (no Android target here), the scrub-thumbnail image codec (its only
# consumer is the gated player), and the updater plugin (no Android/app-store updater support).
[target.'cfg(not(target_os = "android"))'.dependencies]
libmpv2 = "6.0.0"
libmpv2-sys = "4.0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tauri-plugin-updater = "2"
# Direct-API subtitle providers (OpenSubtitles/SubDL). SubDL delivers subtitles as ZIP archives
# that Rust must unzip (first .srt/.ass), and every downloaded body needs charset detection +
# decode to UTF-8 before mpv can load it. All pure-Rust: `zip` with the zlib-rs deflate backend
# (no C toolchain), `chardetng` guesses the legacy encoding, `encoding_rs` decodes it.
zip = { version = "4", default-features = false, features = ["deflate-flate2-zlib-rs"] }
encoding_rs = "0.8"
chardetng = "0.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# Embedded libmpv player for the Android "full" flavor (optional; see the `android-mpv` feature).
tauri-plugin-mpv = { path = "tauri-plugin-mpv", optional = true }
# UI-wide haptics (impact/notification/selection). Android/iOS only; no desktop haptics engine,
# so it is never compiled into the desktop/Deck builds. Registered unconditionally on mobile.
tauri-plugin-haptics = "2"

# Raw Win32 for true borderless fullscreen + mpv-child input passthrough, and the
# WebView2 COM call to make the webview background transparent (Stremio's model:
# opaque window + transparent webview). windows 0.61 + webview2-com 0.38 match
# Tauri 2.11's own versions so the `with_webview` controller interface unifies.
# Iroh's wmi edge is separately locked to windows 0.62 in Cargo.lock.
[target.'cfg(windows)'.dependencies]
# librqbit uses AWS-LC's legacy SHA-1 implementation for torrent piece hashes.
# Bundle NASM for Windows builders instead of requiring a system installation.
aws-lc-rs = { version = "1.17.3", features = ["prebuilt-nasm"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  # SetThreadExecutionState — keep the display + system awake while a video plays.
  "Win32_System_Power",
  "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.38"

# Linux: embed mpv via its OpenGL render API into a wl_subsurface placed below the
# transparent webview (see player/linux_embed.rs). gtk3/gdk/glib match Tauri 2.11's
# webkitgtk stack (window/CSD geometry + main-thread dispatch); khronos-egl builds our
# own EGL context on the subsurface; wayland-client/-egl create the subsurface tree;
# raw-window-handle pulls the toplevel wl_surface/wl_display out of the Tauri window;
# the `gl` crate is used for the clear/viewport around mpv's render.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
gl = "0.14"
khronos-egl = { version = "6", features = ["dynamic"] }
wayland-client = "0.31"
wayland-egl = "0.32"
# zwp_idle_inhibit_manager_v1 — keep the screen awake during playback. gamescope (Deck Game
# mode) honors this Wayland protocol but ignores logind idle locks (systemd-inhibit), so this
# is the only path that stops the Deck screen dimming mid-episode. Pairs with wayland-client 0.31.
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
# Steam Deck Game mode (gamescope): gamescope exposes NO wl_subcompositor (so the subsurface
# path above can't run) but DOES expose zwlr_layer_shell_v1 + dmabuf. We render the video into
# a layer-shell BACKGROUND surface and keep the transparent webview toplevel on top → gamescope
# composites controls over fullscreen video, same UX as Desktop. (Measured on gamescope 3.16.)
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
raw-window-handle = "0.6"
# Steam Deck L2/R2 seek: webkit2gtk's own Gamepad API (libmanette) doesn't reliably see the
# Deck's (Steam-virtual) controller, so we read it directly via evdev in the Rust backend and
# forward the trigger state to the webview. gilrs handles enumeration + Xbox trigger mapping.
gilrs = "0.11"
# Pinned to the exact version wry/Tauri 2.11 links (must unify — one `web_kit2` links key).
# Used to force HardwareAccelerationPolicy::Never so WebKit renders the UI in software:
# with accelerated compositing on, WebKit's layer subsurfaces don't clear on a transparent
# view, leaving ghost rectangles (menus/tooltips) until a resize.
webkit2gtk = { version = "=2.0.2", features = ["v2_40"] }
# Steam Deck Flatpak auto-update: drive the org.freedesktop.portal.Flatpak UpdateMonitor
# (detect a pending OSTree update + ask the portal to install it) over the XDG portal — no
# sandbox holes / --talk-name needed. `tokio` matches our async commands; `flatpak` gates the
# UpdateMonitor API (the module is behind that feature). Uses the same zbus 5 as the rest of the
# tree, so no duplicate D-Bus stack. Linux-only (portals don't exist elsewhere).
ashpd = { version = "0.13", default-features = false, features = ["tokio", "flatpak"] }
